--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="control-section">
                     <h2><i class="fas fa-search icon"></i> Filter & Sort</h2>
                     <div class="control-group">
-                        <label for="searchInput">Search by Name (starts with) or ID (contains)</label>
+                        <label for="searchInput">Search by Name or ID </label>
                         <input type="text" id="searchInput" placeholder="E.g., Char, a1-, Mew...">
                     </div>
                     <div class="control-group">
